# Co2SensorApplication

./: Dockerfile  README.md  co2_sensor_test.py  main.py  pyproject.toml
Database/: influxdb.py
Sensors/: co2.py
Tests/: co2_sensor_test.py
